# pepper-local

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  bundle.sh  docker-compose.prod.yaml  docker-compose.yaml  env.dev  env.example  env.prod  pepper-local.spec  pyproject.toml  run.sh
.github/workflows/: pylint.yml  python-app-testing.yml
app/: __init__.py  __main__.py  alembic.ini  application.py  db.py  manage.py  model_schemas.py  models.py  sample.py  settings.py  tasks.py  utils.py
app/alembic/: env.py
app/handlers/: __init__.py  handler_device_status.py  handler_process_device.py  handler_process_position.py  handler_validator.py  htypes.py
app/migrations/: env.py
app/routes/: __init__.py  components.yaml  objects.py  positions.py
app/samples/: data.json
pepper-app/: pepper-app.spec  pyproject.toml
pepper-app/src/app/: __init__.py  application.py  db.py  main.py  settings.py  tasks.py
pepper-app/src/app/handlers/: __init__.py  handler_device_status.py  handler_process_device.py  handler_process_position.py  handler_validator.py
pepper-app/src/app/migrations/: env.py
pepper-app/src/app/migrations/versions/: 2acdc0783f81_initial.py
pepper-app/src/app/routes/: __init__.py  components.yaml  objects.py  positions.py
