[project]
name = "pepper-local"
description = "A simple utility application for merging telematics location data"
license = "MIT"
version = "0.1"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "drolx Labs", email = "dev@drolx.com" }]
keywords = ["Jobs", "Tasks", "Tool", "Utility"]
urls = { Homepage = "https://github.com/drolx/pepper-local" }

dependencies = ["pepper-app"]

[tool.uv.sources]
pepper-app = { workspace = true }

[tool.uv.workspace]
members = ["pepper-app"]
